Closed Bug 232094 Opened 21 years ago Closed 20 years ago

Send Link and Find Previous menu items need to be "dimmed" when no window is opened

Categories

(Camino Graveyard :: Toolbars & Menus, defect)

PowerPC
macOS
defect
Not set
normal

Tracking

(Not tracked)

VERIFIED FIXED
Camino0.9

People

(Reporter: chrispetersen, Assigned: jpellico)

Details

Attachments

(1 file)

Build: 2004012303
Platform: OS X 10.3.2
Expected Results: Send Link and Find Previous menu items should be dimmed when
no browser windows are opened.
What I got: With no browser window opened, the Send Link and Find Previous menu
items are active but not functional.

Steps to reproduce:

1) Launch Camino
2) Close the browser window
3) Send Link and Find Previous menu items are active but don't actually function
after they are selected. Ideally, we should dim them. Yes, this a polish issue
but we should fix it ..
Send link is dimmed in my copy of Camino if I follow your steps, find previous
isn't how ever dimmed. But I think in general we need to make sure context and
menu items are dimmed when not needed.
Interesting... I see my original issue with send link under 2004012303 on
different two machines with brand new profiles. Which build are you using ?
(In reply to comment #2)
> Interesting... I see my original issue with send link under 2004012303 on
> different two machines with brand new profiles. Which build are you using ?

On 10.2 the "Send link" menu item is dimmed. On 10.3 it isn't. The find previous
menu item is always shown.
on 10.3.2, send link is dimmed for me, find previous isn't. should be easy to
fix, but...
Status: NEW → ASSIGNED
Target Milestone: --- → Camino0.9
I'm baffled why I'm still getting Send Link to be active when the browser window
is closed. I have removed ~/Library/Application Support/Chimera and
~/Library/Preferences/org.mozilla.navigator.plist and relaunched Camino. After
closing the initial browser window this is created, Send link is still active
under File menu. Tested with 2004012703 under 10.3.2 (7d24).
i upgraded to the latest security patches and rebooted and now i can reproduce this.

wtf? :D
Uh...is it just me, or is this farily obvious, as a result of -[MainController
validateMenuItem:]? I'll post a patch shortly on my Mac to demonstrate...
Attached patch a fix...Splinter Review
A little bit o' Xcode works wonders. Someone wanna check this? :)

While we're on it, I notice Find Again and Find Previous are both enabled
before I've used Find in a window. I checked it out and it seems -[BWC
lastFindText:] returns some nonempty string...dunno what it is though
since I got the fix, I might as well snatch...
Assignee: pinkerton → jpellico
Status: ASSIGNED → NEW
Well Julian large parts of the main menu items aren't enabled or disabled for
that matter. If you have time and motivation it would be wonderfull if you could
take a look at some.
Comment on attachment 161833 [details] [diff] [review]
a fix...

Jasper, I may get to that someday then. If I find more, I guess I'll open
another bug...
Attachment #161833 - Flags: review?(jonraphaelson)
Reviewed. Once I can actually set the flags, I'll plus it.
Status: NEW → ASSIGNED
Comment on attachment 161833 [details] [diff] [review]
a fix...

I'll set it for you :-)
Attachment #161833 - Flags: review?(jonraphaelson) → review+
Attachment #161833 - Flags: review?(joshmoz)
Attachment #161833 - Flags: review?(qa-mozilla)
Attachment #161833 - Flags: review?(joshmoz)
Attachment #161833 - Flags: review?(qa-mozilla) → superreview?(pinkerton)
Comment on attachment 161833 [details] [diff] [review]
a fix...

+  if (inURL == nil || [inURL isEqualToString: @"about:blank"] || [inURL
isEqualToString: @""])

make it |if (!inURL ...)| and sr=pink.
Attachment #161833 - Flags: superreview?(pinkerton) → superreview+
landed
Status: ASSIGNED → RESOLVED
Closed: 20 years ago
Resolution: --- → FIXED
With the 2004102508 NB , this issue has been fixed. Tested under 10.3.5 (7M34).
 Marking as verified.
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: