fix bug 232094 - Send Link and Find Previous menu items need to be "dimmed" when no window is opened